added whatsapp call/text

--- a/index.html
+++ b/index.html
@@ -141,12 +141,22 @@ background-color: #25D366;
         <img src="images/cafe.jpg" class="card-img-top" alt="whatsapp logo">
         <div class="card-body">
           <h5 class="card-title">Or call or text us in store</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit quam, sit amet interdum velit faucibus eget.</p>
+          <p class="card-text">Tell us your order over the phone.</p><br>
           <a href="tel:+353866022191" class="btn btn-primary">Call Us</a>
         </div>
       </div>
     </div>
   </div>
+  <div class="col-md-6">
+  <div class="card">
+    <img src="images/deliveroo.jpg" class="card-img-top" alt="deliveroo logo">
+    <div class="card-body">
+      <h5 class="card-title">Order on Deliveroo</h5>
+      <p class="card-text">Order your favorite items on Deliveroo and enjoy.</p><br>
+      <a href="https://deliveroo.ie/menu/dublin/cabra/mad-brothers-dublin" class="btn btn-primary">Order on Deliveroo</a>
+    </div>
+  </div>
+</div>
 </div>
 
 
