--- a/about.html
+++ b/about.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <title>Mad Brothers Bakery</title>
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Custom CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
 
   <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
@@ -43,16 +44,35 @@
     .card-text {
       font-size: 0.9rem;
     }
-	 .navbar-image {
+    footer {
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 50px;
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      line-height: 50px;
+    }
+
+    .navbar-image {
   margin-right: 20px;
   margin-left: -60px;
-} 
-	 
+}
+
+.btn-primary:hover {
+background-color: #25D366;
+}
+
+.deliveroo {
+  text-align: center;
+}
+
   </style>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <div class="navbar-image">
         <img src="favico-square.png" width="45" lenght="45">
@@ -67,7 +87,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html#about-us">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="menu.html#menu-paragraph">Our Menu</a>
@@ -77,6 +97,13 @@
       </div>
     </nav>
 
+    <script>
+    function scrollToSection(event) {
+      event.preventDefault(); // Prevent default behavior of link click
+      const section = document.getElementById('menu-paragraph'); // Get contact section by ID
+      section.scrollIntoView({behavior: "smooth"}); // Scroll to contact section smoothly
+    }
+    </script>
 
   <div class="jumbotron">
     <div>
@@ -86,35 +113,7 @@
   </div>
 
 
-<!--
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1529104962253-56ba3b3b2d7b" class="card-img-top" alt="Cafe 1">
-          <div class="card-body">
-            <h5 class="card-title">Cafe 1</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit quam, sit amet interdum velit faucibus eget.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-      <img src="https://images.unsplash.com/photo-1580519543131-5b34a6d467bf" class="card-img-top" alt="Cafe 3">
-      <div class="card-body">
-        <h5 class="card-title">Cafe 3</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit quam, sit amet interdum velit faucibus eget.</p>
-        <a href="#" class="btn btn-primary">Learn More</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
--->
- <!-- Bootstrap JS and jQuery -->
-
- <!-- Contact Section -->
+ <!-- About Section -->
 
  <section id="about-us" class="py-5">
  	<div class="container">
@@ -138,24 +137,36 @@
          <h2>Contact Us</h2>
          <p>Feel free to reach out to us with any questions or feedback.</p>
          <p><i class="fa fa-phone"></i> (123) 456-7890</p>
-         <p><i class="fa fa-envelope"></i> MadBrothersDublin@gmail.com</p>
+         <p><i class="fa fa-envelope"></i> <a href="mailto:MadBrothersDublin@gmail.com">MadBrothersDublin@gmail.com</a></p>
          <p><i class="fa fa-map-marker"></i> 17 Nephin Rd, Ashtown, Dublin, D07 N8K7 </p>
           </div>
        <div class="col-md-6">
          <h2>Hours of Operation</h2>
-         <p>Monday - Friday: 7am - 10pm</p>
-         <p>Saturday - Sunday: 9am - 6pm</p>       </div>
+         <p><b> Monday - Wendesday:</b> 	8 a.m.– 4 p.m</p>
+         <p><b> Thursday - Friday:</b> 	8 a.m.– 5 p.m</p>
+        <p><b>Saturday:</b>	8:30 a.m. – 5 p.m</p>
+        <p><b>Sunday: </b>	9 a.m. – 3:30 p.m</p>
+
+       </div>
      </div>
    </div>
  </section>
 
- <footer>
- 	<div class="container">
- 		<p>&copy; 2023 Mad Brothers Bakery. All rights reserved.</p>
- 		<ul class="list-inline">
-	      <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span> Follow us on tiktok</span></a></li>
-	      <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
+ <div class="socials">
+ <div class="container">
+   <div class="text-center">
+ <ul class="list-inline">
+     <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span> Follow us on tiktok</span></a></li>
+     <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
 </ul>
+</div>
+</div>
+</div>
+
+
+ <footer>
+  <div class="container-fixed">
+    <p>&copy; 2023 Mad Brothers Bakery. All rights reserved.</p>
  </div>
  </footer>
 
