--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     .card-text {
       font-size: 0.9rem;
     }
-    .footer {
-      position: fixed;
+    footer {
       bottom: 0;
       left: 0;
       right: 0;
@@ -64,6 +63,11 @@
 .btn-primary:hover {
 background-color: #25D366;
 }
+
+.deliveroo {
+  text-align: center;
+}
+
   </style>
 </head>
 <body>
@@ -125,56 +129,42 @@ background-color: #25D366;
 -->
 <div class="container">
   <h2>Place an Order</h2>
+  <div class="deliveroo">
   <div class="row">
     <div class="col-md-6">
       <div class='card'>
         <img src="images/whatsapp.jpg" class="card-img-top" alt="whatsapp logo">
         <div class="card-body">
-          <h5 class="card-title">Place an order on our Whatsapp?</h5>
+          <h5 class="card-title">Whatsapp</h5>
           <p class="card-text"> Call or send us a chat detailing your order.  <br> We can't wait to hear from you!</p>
           <a href="https://wa.me/353866022191?text=Hi%2C%20I'd%20like%20to%20place%20an%20order." class="btn btn-primary">Whatsapp Chat</a>
         </div>
       </div>
     </div>
     <div class="col-md-6">
+    <div class="card">
+      <img src="images/deliveroo.jpg" class="card-img-top" alt="deliveroo logo">
+      <div class="card-body">
+        <h5 class="card-title">Order on Deliveroo</h5>
+        <p class="card-text">Order your favorite items from us on Deliveroo.<br> just clixk the link below. </p>
+        <a href="https://deliveroo.ie/menu/dublin/cabra/mad-brothers-dublin" class="btn btn-primary">Order on Deliveroo</a>
+      </div>
+    </div>
+  </div>
+  <br>
+    <div class="col-md-6 mx-auto">
       <div class='card'>
         <img src="images/cafe.jpg" class="card-img-top" alt="whatsapp logo">
         <div class="card-body">
-          <h5 class="card-title">Or call or text us in store</h5>
-          <p class="card-text">Tell us your order over the phone.</p><br>
+          <h5 class="card-title">Call or text us in store</h5>
+          <p class="card-text">Tell us your order over the phone. <br> On <a href="tel:+353866022191">0834571723</p>
           <a href="tel:+353866022191" class="btn btn-primary">Call Us</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-md-6">
-  <div class="card">
-    <img src="images/deliveroo.jpg" class="card-img-top" alt="deliveroo logo">
-    <div class="card-body">
-      <h5 class="card-title">Order on Deliveroo</h5>
-      <p class="card-text">Order your favorite items on Deliveroo and enjoy.</p><br>
-      <a href="https://deliveroo.ie/menu/dublin/cabra/mad-brothers-dublin" class="btn btn-primary">Order on Deliveroo</a>
-    </div>
-  </div>
 </div>
 </div>
-
-
-      <!--
-      <div class="col-md-4">
-        <div class="card">
-      <img src="https://images.unsplash.com/photo-1580519543131-5b34a6d467bf" class="card-img-top" alt="Cafe 3">
-      <div class="card-body">
-        <h5 class="card-title">Cafe 3</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit quam, sit amet interdum velit faucibus eget.</p>
-        <a href="#" class="btn btn-primary">Learn More</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
--->
- <!-- Bootstrap JS and jQuery -->
 
  <!-- Contact Section -->
  <!-- Contact Section -->
@@ -185,24 +175,36 @@ background-color: #25D366;
          <h2>Contact Us</h2>
          <p>Feel free to reach out to us with any questions or feedback.</p>
          <p><i class="fa fa-phone"></i> (123) 456-7890</p>
-         <p><i class="fa fa-envelope"></i> MadBrothersDublin@gmail.com</p>
+         <p><i class="fa fa-envelope"></i> <a href="mailto:MadBrothersDublin@gmail.com">MadBrothersDublin@gmail.com</a></p>
          <p><i class="fa fa-map-marker"></i> 17 Nephin Rd, Ashtown, Dublin, D07 N8K7 </p>
           </div>
        <div class="col-md-6">
          <h2>Hours of Operation</h2>
-         <p>Monday - Friday: 7am - 10pm</p>
-         <p>Saturday - Sunday: 9am - 6pm</p>       </div>
+         <p><b> Monday - Wendesday:</b> 	8 a.m.– 4 p.m</p>
+         <p><b> Thursday - Friday:</b> 	8 a.m.– 5 p.m</p>
+        <p><b>Saturday:</b>	8:30 a.m. – 5 p.m</p>
+        <p><b>Sunday: </b>	9 a.m. – 3:30 p.m</p>
+
+       </div>
      </div>
    </div>
  </section>
 
+ <div class="socials">
+ <div class="container">
+   <div class="text-center">
+ <ul class="list-inline">
+     <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span> Follow us on tiktok</span></a></li>
+     <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
+</ul>
+</div>
+</div>
+</div>
+
+
  <footer>
-  <div class="container">
+  <div class="container-fixed">
     <p>&copy; 2023 Mad Brothers Bakery. All rights reserved.</p>
-    <ul class="list-inline">
-        <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span>Follow us on tiktok</span></a></li>
-        <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
- </ul>
  </div>
  </footer>
 
